TBA
	* bug fixes
	 - LRU counters were broken, causing constant lock purge (433, 432)
	 - garbage on read from stripes with failed OSTs (441)
	 - mark OSCs as active before reconnecting during recovery (438)
	 - lov_enqueue and lov_cancel need to handle inactive OSTs (403)
	 - lfind did not preserve OST order in output (443)
	 - symlinks cause hung clients, incorrect data (439)
	 - stop dereferencing request after dropping refcount (457)
	 - don't LASSERT(spin_is_locked) on non-SMP (455)
	 - fixes for many rename() bugs
	 - fstat didn't correctly synchronize attributes (399)
	 - server must handle lock cancellation during blocking AST prep (487)
	 - bulk descriptors were free()d too soon (511)
	 - fix paths in lconf, which would load incorrect modules (451, 507)
	 - fix confusing lconf 'host not found' error message (386)

2002-12-02  Andreas Dilger  <adilger@clusterfs.com>
	* version v0_5_18
	* bug fixes
	  - fix many simultaneous client startup (392)
	  - fix dentry->d_it clobbering
	  - credentials weren't being shipped for readdir/getattr operations
	  - remove invalid assertions triggered during some concurrent MD
	    updates
	  - proper Lustre versions added (336, 389)
	  - fix memory leak for create error case (398)
	  - fix LOV locking bug that would get cli/srv out of sync
	  - fix echo client over LOV (409)
	  - fix dbench 2, extN refcount problem (170, 258, 356, 418)
	  - fix double-O_EXCL intent crash (424)
	  - avoid sending multiple lock CANCELs (352)
	* Features 
	  - MDS can do multi-client recovery (modulo bugs in new code)
	* Documentation 
	  - many updates, edits, cleanups

2002-11-18  Phil Schwan  <phil@clusterfs.com>
	* version v0_5_17
	* bug fixes
	  - fix null d_it dereference (346)
	  - fix full OST/dbench hang (333)
	  - fix permission problem with file removal (286)
	  - fix removal of OSCs from LOV when they fail
	  - fix NULL deref during bulk timeout (214)
	  - fix problems related to multiple filesystems on one MDS (241)